--- a/gradebook/templates/index.html
+++ b/gradebook/templates/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
-
+ {% block title %}
+ Home
+ {% endblock %}
 {% block content %}
     <div class="container-fluid">
         <h3 class="m-4">All Students</h3>
