--- a/gradebook/templates/Semester_List.html
+++ b/gradebook/templates/Semester_List.html
@@ -12,7 +12,7 @@
     <ul>
         {% for semester in object_list %}
             <li>
-                <br href="{% url 'semester_detail' semester.semester_number %}">Semester {{ semester.semester_number}} {{ semester.year}}<br></a>
+                <a href="{% url 'semester_detail' semester.semester_number %}">Semester {{ semester.semester_number}} {{ semester.year}}<br></a>
                 {% if user.is_superuser %}
                         <a class="btn btn-success" href="{% url 'semester_update' semester.pk %}">Update</a>
                         <a class="btn btn-danger" href="{% url 'semester_delete' semester.pk %}">Delete</a>
