--- a/gradebook/templates/Course_Update.html
+++ b/gradebook/templates/Course_Update.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block title %}
-Delete Post
+Update Course
 {% endblock %}
 
 {% block content %}
-    <p>Are you sure to delete?</p>
     <form method="post">
     {% csrf_token %}
-    <button class="btn btn-danger">Delete</button>
+    {{ form.as_p }}
+    <button class="btn btn-warning">Update</button>
     </form>
 
 {% endblock %}
